@@ -1,5 +1,7 @@
 1/12/12
   Fix for window size with toggle_bar()
+  Fix for fullscreen window unmapping when window
+   opens on a different desktop
 
 30/11/12
   Added Control to keyboard shortcuts mods
